--- a/scripts/kieran_berton.ipynb
+++ b/scripts/kieran_berton.ipynb
@@ -31,6 +31,9 @@
     "from sklearn.model_selection import train_test_split\n",
     "import warnings\n",
     "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
+    "from sklearn import linear_model\n",
+    "from sklearn.metrics import classification_report, confusion_matrix, plot_confusion_matrix\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn import metrics\n",
@@ -44,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +177,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,39 +261,196 @@
     "midi_features = pd.read_csv('../data/midi_features.csv')\n",
     "midi_features.drop('Unnamed: 0',axis=1,inplace=True)\n",
     "\n",
-    "X = X.merge(midi_features,left_on = 'filename',right_on='file_name')\n",
-    "X.drop('file_name',axis=1,inplace=True)\n",
-    "# X['midi_note_density']=(X['midi_num_notes'] / X['seconds'])\n",
+    "X_with_midi = X.merge(midi_features,left_on = 'filename',right_on='file_name')\n",
+    "X_with_midi.drop('filename',axis=1,inplace=True)\n",
     "\n",
     "###############################################################################################\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=0.80, test_size=0.20, stratify=y, random_state=101)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=0.80, test_size=0.20, stratify=y, random_state=101)\n",
+    "X_train_with_midi, X_test_with_midi, y_train, y_test = train_test_split(X_with_midi, y, train_size=0.80, test_size=0.20, stratify=y, random_state=101)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['harmonic', 'filename', 'mfcc_0', 'mfcc_1', 'mfcc_2', 'mfcc_3',\n",
-       "       'mfcc_4', 'mfcc_5', 'mfcc_6', 'mfcc_7',\n",
-       "       ...\n",
-       "       'seconds', 'midi_nunique_inst', 'midi_nunique_note', 'midi_num_notes',\n",
-       "       'midi_min_note', 'midi_second_quintile_note', 'midi_median_note',\n",
-       "       'midi_fourth_quintile_note', 'midi_max_note', 'midi_avg_notes_inst'],\n",
-       "      dtype='object', length=177)"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "# X_with_midi.to_csv('../data/df_wav_and_midi.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train.drop('filename',axis=1,inplace=True) \n",
+    "X_test.drop('filename',axis=1,inplace=True) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "X_train.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_test.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PCA Data Reduction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "help(f1_score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#all possible values of principal components can go up to the number of features\n",
+    "all_possible_k = range(1,len(X_train.columns))\n",
+    "\n",
+    "# Create empty list to store fraction of total variance\n",
+    "all_possible_k_variance = []\n",
+    "\n",
+    "# Write for loop to try k values for PCA\n",
+    "for i in all_possible_k:\n",
+    "    pca=PCA(n_components = i)\n",
+    "    pca.fit(X_train)\n",
+    "    train_pca = pca.transform(X_train)\n",
+    "    test_pca = pca.transform(X_test)\n",
+    "    \n",
+    "    #Append fractions of explained total variance\n",
+    "    all_possible_k_variance.append(np.sum(pca.explained_variance_ratio_))\n",
+    "    \n",
+    "    #Logistic Regression Model with PCA\n",
+    "    reg = linear_model.LogisticRegression(max_iter = 100,solver='liblinear')\n",
+    "    reg.fit(train_pca,y_train)\n",
+    "    reg_predict = reg.predict(test_pca)\n",
+    "    print(\"F1 Score with \", i,\" principal components: {:.2f}\".format(f1_score(y_test,reg_predict,average='weighted')))\n",
+    "\n",
+    "    np.set_printoptions(precision=2)\n",
+    "\n",
+    "    \n",
+    "\n",
+    "\n",
+    "plt.plot(all_possible_k[0:8], all_possible_k_variance[0:8])\n",
+    "print(all_possible_k_variance[0:8])\n",
+    "\n",
+    "# show lineplot of fraction of total variance vs. number of principal components, for all possible numbers of principal components.\n",
+    "# Add title and axis names\n",
+    "plt.title('Number of PCA Components vs Explained Variance Fraction ')\n",
+    "plt.xlabel('Number of PCA Components')\n",
+    "plt.ylabel('Explained Variance')\n",
+    "\n",
+    "plt.show()  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pca=PCA(n_components = 5)\n",
+    "pca.fit(X_train)\n",
+    "X_train_pca = pca.transform(X_train)\n",
+    "X_test_pca = pca.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Logistic Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# help(linear_model.LogisticRegression)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Logistic Regression Model with PCA\n",
+    "reg = linear_model.LogisticRegression(max_iter = 100,solver='liblinear')\n",
+    "reg.fit(X_train_pca,y_train)\n",
+    "reg_predict = reg.predict(X_test_pca)\n",
+    "print(classification_report(y_test,reg_predict))\n",
+    "\n",
+    "np.set_printoptions(precision=2)\n",
+    "\n",
+    "# # Plot non-normalized confusion matrix\n",
+    "# titles_options = [(\"Confusion matrix, without normalization\", None),\n",
+    "#                   (\"Normalized confusion matrix\", 'true')]\n",
+    "# for title, normalize in titles_options:\n",
+    "#     disp = plot_confusion_matrix(reg, X_test_pca, y_test,\n",
+    "#                                 #  display_labels=ens_list,\n",
+    "#                                  cmap=plt.cm.Blues,\n",
+    "#                                  normalize=normalize)\n",
+    "#     disp.ax_.set_title(title)\n",
+    "# plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Logistic Regression Model without PCA\n",
+    "reg = linear_model.LogisticRegression(max_iter = 100,solver='liblinear')\n",
+    "reg.fit(X_train,y_train)\n",
+    "reg_predict = reg.predict(X_test)\n",
+    "print(classification_report(y_test,reg_predict))\n",
+    "\n",
+    "np.set_printoptions(precision=2)"
    ]
   },
   {
