--- a/scripts/Ziling_Huang_SVM.ipynb
+++ b/scripts/Ziling_Huang_SVM.ipynb
@@ -1631,7 +1631,7 @@
     "\n",
     "- It has PCA with 15 components, SMOTE application to balance the sample classes and also hyperparameter tuning where we found the best C, best gamma and also that linear kernel is the best kernel to use amongst the 3 types that are available.\n",
     "\n",
-    "- When run on test data, the best SVM model had an F1 Score of 82.86%."
+    "- When run on test data, the best SVM model had an F1 Score of 84.17%."
    ]
   },
   {
@@ -1643,16 +1643,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'C': 0.03359818286283781, 'gamma': 0.001, 'kernel': 'linear'}\n",
-      "Accuracy score:  0.7727272727272727\n",
-      "F1 Score:  0.8286041559565246\n"
+      "{'C': 0.012742749857031334, 'gamma': 0.001, 'kernel': 'linear'}\n",
+      "Accuracy score:  0.7878787878787878\n",
+      "F1 Score:  0.8417115822254162\n",
+      "Classification report: \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.00      0.00      0.00         1\n",
+      "           1       0.86      0.97      0.91        31\n",
+      "           2       0.33      1.00      0.50         1\n",
+      "           4       0.83      0.91      0.87        11\n",
+      "           5       0.00      0.00      0.00         1\n",
+      "           6       0.00      0.00      0.00         1\n",
+      "           7       1.00      1.00      1.00         2\n",
+      "           8       0.00      0.00      0.00         1\n",
+      "           9       0.00      0.00      0.00         1\n",
+      "          11       0.00      0.00      0.00         1\n",
+      "          12       1.00      1.00      1.00         2\n",
+      "          13       0.00      0.00      0.00         1\n",
+      "          14       0.67      1.00      0.80         2\n",
+      "          15       0.00      0.00      0.00         1\n",
+      "          16       0.67      1.00      0.80         2\n",
+      "          17       0.00      0.00      0.00         1\n",
+      "          18       0.00      0.00      0.00         1\n",
+      "          19       0.75      0.75      0.75         4\n",
+      "          20       0.00      0.00      0.00         1\n",
+      "\n",
+      "    accuracy                           0.79        66\n",
+      "   macro avg       0.32      0.40      0.35        66\n",
+      "weighted avg       0.69      0.79      0.73        66\n",
+      "\n",
+      "Confusion Matrix: \n",
+      " [[ 0  0  0  1  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0 30  0  0  0  0  0  1  0  0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  1  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0 10  0  0  0  0  0  0  0  0  0  0  1  0  0  0  0]\n",
+      " [ 0  0  1  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  1  0]\n",
+      " [ 0  0  0  0  0  0  2  0  0  0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  1  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  1  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  1  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0  2  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  1  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0  0  0  2  0  0  0  0  0  0]\n",
+      " [ 0  1  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  0  2  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0  0  0  1  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  1  0  0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  1  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  3  0]\n",
+      " [ 0  1  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0]]\n"
      ]
     },
     {
@@ -1665,17 +1712,6 @@
       "  _warn_prf(average, modifier, msg_start, len(result))\n",
       "C:\\Users\\Zhuang\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, msg_start, len(result))\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'zero_division' is an invalid keyword argument for print()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-12-a6671bc861e1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     36\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Accuracy score: '\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maccuracy_score\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpredictions_pca_w\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_test_w\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     37\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'F1 Score: '\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mf1_score\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpredictions_pca_w\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_test_w\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maverage\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'weighted'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 38\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Classification report: \\n'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mclassification_report\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_test_w\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpredictions_pca_w\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mzero_division\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     39\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Confusion Matrix: \\n'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconfusion_matrix\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_test_w\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpredictions_pca_w\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'zero_division' is an invalid keyword argument for print()"
      ]
     }
    ],
@@ -1717,7 +1753,7 @@
     "predictions_pca_w = svm.predict(test_pca_w)\n",
     "print('Accuracy score: ', accuracy_score(predictions_pca_w, np.array(y_test_w)))\n",
     "print('F1 Score: ', f1_score(predictions_pca_w, np.array(y_test_w), average='weighted'))\n",
-    "print('Classification report: \\n', classification_report(np.array(y_test_w), predictions_pca_w), zero_division = 0)\n",
+    "print('Classification report: \\n', classification_report(np.array(y_test_w), predictions_pca_w))\n",
     "print('Confusion Matrix: \\n', confusion_matrix(np.array(y_test_w), predictions_pca_w))"
    ]
   }
