For NN, trained with Accuracy but F1-score evaluated afterwards

--- a/scripts/Model Consolidation.ipynb
+++ b/scripts/Model Consolidation.ipynb
@@ -2737,7 +2737,15 @@
     "output_file.writelines([model_no, model_type, model_scores])\n",
     "output_file.close()\n",
     "print(model_no, model_type, model_scores)\n",
-    "pass"
+    "pass\n",
+    "\n",
+    "# predict probabilities for train set\n",
+    "yhat_probs = model.predict(X_train_w, verbose=0)\n",
+    "# predict crisp classes for test set\n",
+    "yhat_classes = model.predict_classes(X_train_w, verbose=0)\n",
+    "\n",
+    "f1 = f1_score(y_train_w, yhat_classes, average='weighted')\n",
+    "print(\"Test Set F1-score: {:.2%}\".format(f1))"
    ]
   },
   {
@@ -2759,27 +2767,6 @@
    "metadata": {},
    "source": [
     "#### 6.2.1 Baseline model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'labels' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-41-c72bf8f70cce>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mf1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompat\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mv1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmetrics\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrecall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpredictions\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompat\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mv1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmetrics\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprecision\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpredictions\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m/\u001b[0m \u001b[1;33m(\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompat\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mv1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmetrics\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrecall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpredictions\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompat\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mv1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmetrics\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprecision\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpredictions\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'labels' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "f1 = 2*(tf.compat.v1.metrics.recall(labels, predictions) * tf.compat.v1.metrics.precision(labels, predictions)) / ( tf.compat.v1.metrics.recall(labels, predictions) + tf.compat.v1.metrics.precision(labels, predictions))"
    ]
   },
   {
@@ -3249,7 +3236,15 @@
     "output_file.writelines([model_no, model_type, model_scores])\n",
     "output_file.close()\n",
     "print(model_no, model_type, model_scores)\n",
-    "pass"
+    "pass\n",
+    "\n",
+    "# predict probabilities for train set\n",
+    "yhat_probs = model.predict(X_train_m, verbose=0)\n",
+    "# predict crisp classes for test set\n",
+    "yhat_classes = model.predict_classes(X_train_m, verbose=0)\n",
+    "\n",
+    "f1 = f1_score(y_train_m, yhat_classes, average='weighted')\n",
+    "print(\"Test Set F1-score: {:.2%}\".format(f1))"
    ]
   },
   {
@@ -3753,7 +3748,15 @@
     "output_file.writelines([model_no, model_type, model_scores])\n",
     "output_file.close()\n",
     "print(model_no, model_type, model_scores)\n",
-    "pass"
+    "pass\n",
+    "\n",
+    "# predict probabilities for train set\n",
+    "yhat_probs = model.predict(X_train_c, verbose=0)\n",
+    "# predict crisp classes for test set\n",
+    "yhat_classes = model.predict_classes(X_train_c, verbose=0)\n",
+    "\n",
+    "f1 = f1_score(y_train_c, yhat_classes, average='weighted')\n",
+    "print(\"Test Set F1-score: {:.2%}\".format(f1))"
    ]
   },
   {
