added bash script to clear output file each time notebook is run

--- a/scripts/Model Consolidation.ipynb
+++ b/scripts/Model Consolidation.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,6 +57,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Clears file to re-generate every time this notebook is run\n",
+    "# If this is not run each model result will be appended onto the existing file\n",
+    "! rm -r ../output/dev_results"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -65,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -149,8 +160,8 @@
      "text": [
       "Model #: 1.1.1\n",
       " Logistic Regression Baseline Model (wav data only)\n",
-      " CV Scores: [0.92574051 0.90265747 0.9403544  0.97619048 0.97485081]\n",
-      " CV Average and standard deviation: 0.9439587339434976 +/- 0.02843903910098547\n",
+      " CV Scores: [0.86865022 0.88865687 0.86914011 0.86424772 0.93960864]\n",
+      " CV Average and standard deviation: 0.8860607118376898 +/- 0.028069053819395614\n",
       "\n"
      ]
     }
@@ -4202,7 +4213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
