--- a/scripts/Model Consolidation.ipynb
+++ b/scripts/Model Consolidation.ipynb
@@ -2454,13 +2454,7 @@
       "8/8 [==============================] - 0s 2ms/step - loss: 0.0387 - accuracy: 0.9870\n",
       "Epoch 82/200\n",
       "8/8 [==============================] - 0s 2ms/step - loss: 0.0268 - accuracy: 0.9870\n",
-      "Epoch 83/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 83/200\n",
       "8/8 [==============================] - 0s 2ms/step - loss: 0.0231 - accuracy: 0.9957\n",
       "Epoch 84/200\n",
       "8/8 [==============================] - 0s 2ms/step - loss: 0.0166 - accuracy: 1.0000\n",
@@ -2758,7 +2752,8 @@
     "output_file.writelines([model_no, model_type, model_scores])\n",
     "output_file.close()\n",
     "print(model_no, model_type, model_scores)\n",
-    "pass\n"
+    "pass\n",
+    "\n"
    ]
   },
   {
@@ -2953,13 +2948,7 @@
       "8/8 [==============================] - 0s 2ms/step - loss: 25.0170 - accuracy: 0.8312\n",
       "Epoch 81/200\n",
       "8/8 [==============================] - 0s 2ms/step - loss: 11.9786 - accuracy: 0.7749\n",
-      "Epoch 82/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 82/200\n",
       "8/8 [==============================] - 0s 2ms/step - loss: 16.3469 - accuracy: 0.7706\n",
       "Epoch 83/200\n",
       "8/8 [==============================] - 0s 2ms/step - loss: 15.6671 - accuracy: 0.7922\n",
@@ -3451,13 +3440,7 @@
       "8/8 [==============================] - 0s 3ms/step - loss: 8.7683 - accuracy: 0.8182\n",
       "Epoch 82/200\n",
       "8/8 [==============================] - 0s 2ms/step - loss: 6.8344 - accuracy: 0.7446\n",
-      "Epoch 83/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 83/200\n",
       "8/8 [==============================] - 0s 2ms/step - loss: 10.4710 - accuracy: 0.8095\n",
       "Epoch 84/200\n",
       "8/8 [==============================] - 0s 2ms/step - loss: 8.3151 - accuracy: 0.8355\n",
@@ -3762,7 +3745,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Observation : Cases removed through SMOTE run on the training data will not be classified correctly in the test data."
+    "### Observation : Cases removed through SMOTE run on the training data will not be classified correctly in the test data step subsequently in the Model Test Set Evaluation.ipynb file ."
    ]
   },
   {
@@ -3824,82 +3807,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SVM Conclusion :\n",
+    "# Conclusion on Cross-Validated Results on Development Set :\n",
     "\n",
-    "- The MIDI data and Data Set containing MIDI data could not complete running on the SVM model.\n",
+    "#### First, we discuss the cross-validation results with respect to the business use case on Spectral Features from WAV Files.\n",
+    "- This is the type of data that will most likely be encountered in a business context and in practice (e.g. for a music playlist application) compared to MIDI data which is labelled. \n",
+    "- We selected F1-Score as the evaluation criterion for our project because it is incorporates prediction error on imbalanced datasets.\n",
+    "    - We can see that the Top 3 Models using Spectral Data are : \n",
+    "            (1) Neural Networks (Full Connected with 5 HiddenLayers and Adam Optimizer) with 100% F1 Score\n",
+    "            (2) Random Forest with SMOTE (Sample Balancing) with 99.6% F1 Score\n",
+    "            (3) SVM (with PCA and SMOTE) with 99.4% F1 Score\n",
     "\n",
-    "- One clue we have here on why the SVM model struggles with classifying the MIDI data is that the best C value is extremely high at 10,000. In other words, very low regularization strength and extreme overfitting is required to fit the model well.\n",
-    "\n",
-    "- In conclusion, the best SVM model was run on spectral data and has a 5-fold cross-validation score of 99.47% with standard deviation of 0.00653 when a cross validation was done on training data,\n",
-    "\n",
-    "- It has PCA with 15 components, SMOTE application to balance the sample classes and also hyperparameter tuning where we found the best C, best gamma and also that linear kernel is the best kernel to use amongst the 3 types that are available.\n",
-    "\n",
-    "- When run on test data, the best SVM model had an F1 Score of 84.17%.\n"
+    "Most other models had F1 Scores above 65%. This gives us confidence to proceed to the next step of validating on the test set. We think our models did reasonably well because the sampling balancing algorithm generated more data for the models to train on for classification.\n",
+    "      \n",
+    "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 41,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'C': 0.012742749857031334, 'gamma': 0.001, 'kernel': 'linear'}\n",
-      "Final Model\n",
-      " SVM with SMOTE, PCA (wav data only)\n",
-      " Accuracy score: 0.7727272727272727, F1 score: 0.8286041559565246\n",
-      "\n"
-     ]
-    }
-   ],
    "source": [
-    "#Drop any ensemble types with counts below 6\n",
-    "counts = y_train_w['ensemble'].value_counts()\n",
-    "X_train_w_smote = X_train_w[~y_train_w['ensemble'].isin(counts[counts < 6].index)]\n",
-    "y_train_w_smote = y_train_w[~y_train_w['ensemble'].isin(counts[counts < 6].index)]\n",
+    "      \n",
+    "#### In the second part of this discussion, we look at the results on MIDI data. \n",
+    "- We know from the Random Forest Analysis that the single most important variable in the MIDI data is the number of unique instruments in the song. \n",
+    "- However, we think such data is less likely to be available in a business context due to cost reasons of manually labelling data. \n",
+    "- The results discussed here are more applicable for academic purposes - for e.g. How well could a model perform with manually labelled data if there were resources to do so for example at a school? \n",
+    "- The use case of such data could be an application for music students to learn and differentiate between ensembles.\n",
+    "- MIDI labels were likely manually created by the data creators by writing into a Music Sheet Program and then converted to MIDI.\n",
+    "    - We see that the Top Model for MIDI data is :\n",
+    "            (1) Random Forest with SMOTE with F1 Score of 99.4%. \n",
     "\n",
-    "# fit and apply the transform\n",
-    "X_SMOTE, y_SMOTE = SMOTE().fit_resample(X_train_w_smote, y_train_w_smote.values.ravel())\n",
     "\n",
-    "#Perform PCA with 15 components\n",
-    "pca=PCA(n_components = 15)\n",
-    "pca.fit(X_SMOTE)\n",
-    "train_pca_w_smote = pca.transform(X_SMOTE)\n",
+    "Some models struggled with classifying the MIDI data. For example, SVM - one clue is that the best C value for SVM is extremely high at 10,000. In other words, very low regularization strength and extreme overfitting is required to fit the model well.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "  \n",
-    "# defining parameter range\n",
-    "param_grid = {'C': np.logspace(-4, 4, 20), \n",
-    "              'gamma': np.logspace(-3, 2, 6),\n",
-    "              'kernel': ['linear','rbf','poly']} \n",
-    "  \n",
-    "grid = GridSearchCV(SVC(), param_grid , cv=5)\n",
-    "  \n",
-    "# fitting the model for grid search\n",
-    "grid.fit(train_pca_w_smote, y_SMOTE)\n",
-    "\n",
-    "print(grid.best_params_)\n",
-    "\n",
-    "#Create SVM model with best hyperparameters, PCA and SMOTE\n",
-    "\n",
-    "svm = make_pipeline(SVC(kernel=grid.best_params_['kernel'], C = grid.best_params_['C'] , gamma=grid.best_params_['gamma']))\n",
-    "svm.fit(train_pca_w_smote, y_SMOTE)\n",
-    "scores = cross_val_score(estimator = svm, X=train_pca_w_smote, y=y_SMOTE, cv=5, n_jobs=1)\n",
-    "\n",
-    "test_pca_w = pca.transform(X_test_w)\n",
-    "predictions_pca_w = svm.predict(test_pca_w)\n",
-    "\n",
-    "output_file = open('../output/test_results', 'a')\n",
-    "model_iteration = 'Final Model\\n'\n",
-    "model_type = 'SVM with SMOTE, PCA (wav data only)\\n'\n",
-    "model_scores = f'Accuracy score: {accuracy_score(predictions_pca_w, np.array(y_test_w))}, F1 score: {f1_score(predictions_pca_w, np.array(y_test_w), average=\"weighted\")}\\n'\n",
-    "cr = f'Classification report: \\n {classification_report(np.array(y_test_w), predictions_pca_w)}'\n",
-    "cm = f'Confusion matrix: \\n {confusion_matrix(np.array(y_test_w), predictions_pca_w)}'\n",
-    "output_file.writelines([model_iteration, model_type, model_scores, cr, cm])\n",
-    "output_file.close()\n",
-    "print(model_iteration, model_type, model_scores)"
+    "#### Lastly, for academic purposes - we wanted to see how the model would perform on both typical Spectral data seen in a business context combined with manually labelled MIDI data. \n",
+    "    - Again here, we see that the Top Model for Combined MIDI and Wav Spectral Data is Random Forest with SMOTE at 99.3%.\n",
+    "    \n",
+    "We conclude that the results on Spectral Data are very promising and we proceed to validate model performance on test data in our next notebook step \"Model Test Evaluation.ipynb\""
    ]
   }
  ],
@@ -3919,7 +3868,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
