--- a/scripts/Model Test Set Evaluation.ipynb
+++ b/scripts/Model Test Set Evaluation.ipynb
@@ -50,6 +50,10 @@
     "import warnings\n",
     "warnings.simplefilter(action='ignore')\n",
     "\n",
+    "# Clears file to re-generate every time this notebook is run\n",
+    "# If this is not run each model result will be appended onto the existing file\n",
+    "! rm -r ../output/test_results\n",
+    "\n",
     "\n"
    ]
   },
@@ -1233,7 +1237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
